--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,20 @@
 {
     "env": {
         "browser": true,
-        "es2021": true
+        "es2021": true,
+        "jquery": true
     },
     "extends": [
-        "airbnb-base"
+        "airbnb-base",
+        "prettier"
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
     "rules": {
+    },
+    "globals": {
+        "Howl": "writable"
     }
 }
