--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
     "husky": "^8.0.1",
     "lint-staged": "^13.0.2"
   },
+  "husky":{
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
-    "*.js": "eslint --cache --fix"
+    "*.js": ["eslint", "prettier"]
   }
 }
