--- a/package.json
+++ b/package.json
@@ -23,14 +23,19 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "husky": "^8.0.1",
-    "lint-staged": "^13.0.2"
+    "lint-staged": "^13.0.2",
+    "pretty-quick": "^3.1.3"
   },
-  "husky":{
+  "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "npx pretty-quick --staged ng lint ng test",
+      "pre-push": "ng build --aot true"
     }
   },
   "lint-staged": {
-    "*.js": ["eslint", "prettier"]
+    "*.js": [
+      "eslint",
+      "prettier"
+    ]
   }
 }
